--- a/api/templates/layout.twig
+++ b/api/templates/layout.twig
@@ -10,8 +10,8 @@
         <title>{% block title %}table status{% endblock %}</title>
         <meta name="description" content="{% block description %}{% endblock %}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="http://{{ app.request.host }}/kickertable/web/css/normalize.css">
+        <link rel="stylesheet" href="http://{{ app.request.host }}/kickertable/web/css/main.css">
     {% endblock %}
 </head>
 <body>
@@ -20,8 +20,8 @@
         {% block content %}{% endblock %}
     </div>
 
-    <script type='text/javascript' src='//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
-    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+    <script src="http://{{ app.request.host }}/kickertable/web/js/vendor/jquery-1.10.2.min.js"></script>
+    <script src="http://{{ app.request.host }}/kickertable/web/js/vendor/modernizr-2.6.2.min.js"></script>
     {% block javascript %}{% endblock %}
 
 </body>
