--- a/api/templates/layout.twig
+++ b/api/templates/layout.twig
@@ -10,8 +10,9 @@
         <title>{% block title %}table status{% endblock %}</title>
         <meta name="description" content="{% block description %}{% endblock %}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="http://{{ app.request.host }}/kickertable/web/css/normalize.css">
-        <link rel="stylesheet" href="http://{{ app.request.host }}/kickertable/web/css/main.css">
+        <link rel="stylesheet" href="http://{{ app.request.host }}/kickertable/web/css/main.css?">
     {% endblock %}
 </head>
 <body>
