--- a/api/web/css/main.css
+++ b/api/web/css/main.css
@@ -185,6 +185,8 @@ body {
 }
 
 #kicker-table .table-busy .name {
+    font-weight: 600;
+    font-size: 14px;
     margin: 15px 0 0 0;
     color: #000000;
     -webkit-border-radius: 20px;
