--- a/api/templates/index.twig
+++ b/api/templates/index.twig
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="table-winner">
-            <div class="winner-text">Game winners</div>
+            <div class="winner-text">Žaidimo nugalėtojai</div>
             <img src="web/img/hor-connector-lines.png">
             <div class="players">
                 <div class="player-0">
